# Azure-Kinect-Samples

./: .gitignore
body-tracking-samples/simple_3d_viewer/: CMakeLists.txt  README.md  main.cpp  skel_cap.cpp  skel_cap.hpp
